--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 .container {
     width: 100%;
     height: 100vh;
-    background: #333; 
+    background:  #ded2fa; 
+    border: 1px solid pink; 
     align-items:center;
     justify-content:center;
     display:flex;
